--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ colocar algumnome.html -->
       rel="stylesheet"
     />
   </head>
-  <body class=""> <!--o que colocar aqui vai aparecer no site.-->
+  <body class="blue"> <!--o que colocar aqui vai aparecer no site.-->
     <div id="app">
     
     </div>
